[package]
name = "sherwood_table"
version = "0.1.0"
edition = "2024"
description = "A Rust implementation of a fast and efficient hash table using Robin-Hood hashing"
authors = ["Gregory Tolmachev <grtollm@gmail.com>"]
license = "MIT"
repository = "https://github.com/Gtollm/Sherwood-Hash-Table"
keywords = ["hash", "hashmap", "hashtable", "robinhood", "open-addressing"]
categories = ["data-structures", "algorithms", "no-std"]
readme = "README.md"

[lib]
name = "sherwood_table"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false
